force-app/main/default/objects/cgcloud__CP_Key_Type__c/cgcloud__CP_Key_Type__c.object-meta.xml
<CustomObject>
    <description>The key type object is used in the complex pricing search strategy.</description>
    <label>Key Type</label>
    <nameField>
        <label>Key Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>