force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Consider_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if business partner will be used as key for condition finding.</description>
    <label>Customer or Customer Hierarchy</label>
    <type>Checkbox</type>
</CustomField>