force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Consider_Account_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Account_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if condition will be searched only in the trade org hierarchy of the orderer.</description>
    <label>Customer Hierarchy Only</label>
    <type>Checkbox</type>
</CustomField>