force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Consider_Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Product_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if condition will be searched only in the product hierarchy</description>
    <label>Product or Product Hierarchy</label>
    <type>Checkbox</type>
</CustomField>