force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Consider_Product_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Product_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if product set will be used as key for condition finding.</description>
    <label>Consider Product Set</label>
    <type>Checkbox</type>
</CustomField>