force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Consider_Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if a valid promotion will be used as key for condition finding.</description>
    <label>Consider Promotion</label>
    <type>Checkbox</type>
</CustomField>