force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Consider_Promotion_Rewards__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Promotion_Rewards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if reward will be used as key for condition finding.</description>
    <label>Consider Reward</label>
    <type>Checkbox</type>
</CustomField>