force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Consider_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Sales_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if sales org will be used as key for condition finding.</description>
    <label>Consider Sales Org</label>
    <type>Checkbox</type>
</CustomField>