force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Distribution_Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Category__c</fullName>
    <description>Reference to the distribution category used for replicating the current key type.</description>
    <label>Distribution Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>To All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>