force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Key_10__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Key_10__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Specifies the mapping of key 10 with an attribute of an object.</description>
    <label>Key 10</label>
    <referenceTo>cgcloud__CP_Key_Attribute__c</referenceTo>
    <relationshipLabel>Key Types (Key 10)</relationshipLabel>
    <relationshipName>Key_Types9</relationshipName>
    <type>Lookup</type>
</CustomField>