force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Key_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Key_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Specifies the mapping of key 2 with an attribute of an object.</description>
    <label>Key 2</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Key 2 and the Key Type must have the same Sales Org.</errorMessage>
        <filterItems>
            <field>cgcloud__CP_Key_Attribute__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__CP_Key_Attribute__c</referenceTo>
    <relationshipLabel>Key Types (Key 2)</relationshipLabel>
    <relationshipName>Key_Types1</relationshipName>
    <type>Lookup</type>
</CustomField>