force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Product_Hierarchy_Only__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Hierarchy_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if condition will be searched only in the product hierarchy.</description>
    <label>Product Hierarchy Only</label>
    <type>Checkbox</type>
</CustomField>