force-app/main/default/objects/cgcloud__CP_Key_Type__c/fields/cgcloud__Replication_Key__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Replication_Key__c</fullName>
    <description>Defines which part of the merged key is used for replicating the condition record.</description>
    <label>Replication Key</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NoReplKey</fullName>
                <default>true</default>
                <label>NoReplKey</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>CustHier</fullName>
            </value>
            <value>
                <fullName>CustSet</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>ProdHier</fullName>
            </value>
            <value>
                <fullName>ProdSet</fullName>
            </value>
            <value>
                <fullName>Key1</fullName>
            </value>
            <value>
                <fullName>Key2</fullName>
            </value>
            <value>
                <fullName>Key3</fullName>
            </value>
            <value>
                <fullName>Key4</fullName>
            </value>
            <value>
                <fullName>Key5</fullName>
            </value>
            <value>
                <fullName>Key6</fullName>
            </value>
            <value>
                <fullName>Key7</fullName>
            </value>
            <value>
                <fullName>Key8</fullName>
            </value>
            <value>
                <fullName>Key9</fullName>
            </value>
            <value>
                <fullName>Key10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>