force-app/main/default/objects/cgcloud__CP_Key_Type__c/validationRules/cgcloud__Check_KeyAttribute6_SalesOrg.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_KeyAttribute6_SalesOrg</fullName>
    <active>true</active>
    <description>The Key 6 and the Key Type must have the same Sales Org.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(cgcloud__Key_6__c)), TEXT( cgcloud__Key_6__r.cgcloud__Sales_Org__c) != TEXT(cgcloud__Sales_Org__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Key_6__c</errorDisplayField>
    <errorMessage>The Key 6 and the Key Type must have the same Sales Org.</errorMessage>
</ValidationRule>