force-app/main/default/objects/cgcloud__CP_Key_Type__c/validationRules/cgcloud__Duplicated_Product_Related_Key_Def.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Duplicated_Product_Related_Key_Def</fullName>
    <active>true</active>
    <errorConditionFormula>(  cgcloud__Product_Hierarchy_Only__c &amp;&amp; (cgcloud__Consider_Product_Hierarchy__c  || cgcloud__Consider_Product_Set__c )) || (cgcloud__Consider_Product_Set__c 
 &amp;&amp; (cgcloud__Consider_Product_Hierarchy__c  || cgcloud__Product_Hierarchy_Only__c )) || (cgcloud__Product_Hierarchy_Only__c &amp;&amp; (cgcloud__Consider_Product_Hierarchy__c || cgcloud__Consider_Product_Set__c ))</errorConditionFormula>
    <errorMessage>You must configure a maximum of one Product Related settings in Key Definitons.</errorMessage>
</ValidationRule>